Import of JZUCKER/SQL-Statement-1.07 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.07
gitpan-cpan-path:         JZUCKER/SQL-Statement-1.07.tar.gz
gitpan-cpan-author:       JZUCKER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.07, released 20 April, 2004
+-------------------------------------
+
+ * fixed infinite recursion bug with empty IN() predicate
+   thanks chromatic, for the patch
+
+ * fixed case issues with table aliases in joins
+   thanks chromatic, for bug report
+
 Version 1.06, released 18 April, 2004
 -------------------------------------
 
