Import of JZUCKER/SQL-Statement-1.08 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.08
gitpan-cpan-path:         JZUCKER/SQL-Statement-1.08.tar.gz
gitpan-cpan-author:       JZUCKER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.08, released 20 April, 2004
+-------------------------------------
+
+ * fixed bug in JOIN handling introduced in 1.06
+
+
 Version 1.07, released 20 April, 2004
 -------------------------------------
 
