--- a/Changes
+++ b/Changes
@@ -1,5 +1,86 @@
 Changes log for Perl extension SQL::Statement
 
+
+Version 1.10, released 27 March, 2005
+----------------------------------------
+ * added support for CREATE TABLE AS SELECT ... and CREATE TABLE AS IMPORT()
+
+ * added support for in-memory tables and heterogeneous operations,
+   see the SQL::Parser docs
+
+ * added many new built-in functions see SQL::Statement::Functions.pm
+
+ * added support for user-defined functions, see SQL::Statement::Functions.pm
+
+ * added support for column name aliases
+       thanks for patch, Robert Rothenberg
+
+ * added support for comparison to empty string (e.g. WHERE col1='')
+   currently returns the same as WHERE col1 IS NULL
+       thanks for patch, cpanATgoess.org
+
+ * fixed bug in S::P::clean_sql() newline-handling,
+       thanks for patch Steffen G., steffenATkonzeptloses.de
+
+ * fixed bug in  SQL::Parser::feature()
+       thanks for patch, chromatic
+
+ * the word "INTO" is now optional in "INSERT INTO tblname ..."
+ * the word "FROM" is now optional in "DELETE FROM tblname ..."
+       thanks for suggestion, gipeol@sci.kun.nl
+
+ * optimized portions of eval_where, process_predicate, and is_matched
+   HUGE thanks Dan Wright and Dean Arnold for patches
+
+ * HUGE thanks to Dean Arnold for all the following which should clean up
+   a number of bugs in parentheses parsing and in the predicates IN and
+   BETWEEN as well as speed things up considerably
+
+	SQL::Parser changes:
+	- removed recursion from get_in(), get_btwn()
+	- fixed paren scan and argument separator scan in get_in()
+	- optimized get_in/get_btwn code
+	- made get_in/get_btwn OO methods to support
+		being overridden by subclasses
+	- added transform_syntax() abstract method
+		to permit subclasses to add their own
+		syntax extensions
+	- rewrite of parens_search() to fixed predicate 
+		paren processing, remove recursion, and optimize
+		code
+	- rewrite of non_parens_search() to fixed predicate 
+		paren processing and optimize code
+	- rewrite of PREDICATE to optimize code; moved
+		operator regex construction to dialect
+		initialization
+	- change undo_string_funcs(), undo_math_funcs(),
+		nongroup_numeric(), nongroup_string()
+		to remove scoped recursion
+	- fixed nongroup_numeric() for case insensitive
+		operator match
+	- fixed nongroup_string, undo_string_funcs() to
+		include user defined funcs
+	- fixed ROW_VALUE's scan for user defined function
+		argument separator scan
+
+     * fixed function detection regex in SQL::Parser::ROW_VALUE
+ 	to accomodate arbitrary spacing
+
+     * fixed SQL::Parser::SELECT_LIST()/extract_column_list()
+ 	to support concat operator '||' expressions
+
+     * added following functions to SQL::Statement::Functions:
+ 	- COALESCE
+ 	- NVL (same as COALESCE)
+ 	- DECODE (same as Oracle DECODE)
+ 	- CONCAT
+ 	- REPLACE/SUBSTITUTE
+ 
+     * fixed/adapted SQL::Statement::get_row_value(), 
+	SQL::Statement::SELECT(), for join'ed
+ 	resultsets
+
+
 Version 1.09, released 22 April, 2004
 -------------------------------------
  * fixed parens parsing bug reported by Dan Wright, thanks!
