Import of JZUCKER/SQL-Statement-1.13 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.13
gitpan-cpan-path:         JZUCKER/SQL-Statement-1.13.tar.gz
gitpan-cpan-author:       JZUCKER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 Changes log for Perl extension SQL::Statement
 
-Version 1.12, released 12 April, 2005
+Version 1.13, released 18 April, 2005
+----------------------------------------
+ * pod fixes
+
+Version 1.12, released 18 April, 2005
 ----------------------------------------
  * added support for GROUP BY
    (several people sent suggestions for this in the past, please email me
