Import of JZUCKER/SQL-Statement-1.14 from CPAN.
gitpan-cpan-distribution: SQL-Statement
gitpan-cpan-version:      1.14
gitpan-cpan-path:         JZUCKER/SQL-Statement-1.14.tar.gz
gitpan-cpan-author:       JZUCKER
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.14, released 21 April, 2005
+----------------------------------------
+ * fixed circular dependency in tests (one mistakenly required AnyData)
+
 Version 1.13, released 18 April, 2005
 ----------------------------------------
  * pod fixes
