--- a/Changes
+++ b/Changes
@@ -1,5 +1,31 @@
 Changes log for Perl extension SQL::Statement
 
+Version 1.19, released February 6th, 2009
+------------------------------------------
+
+* Fixed OUTER JOIN behaviour
+* Added version info to all *.pm files to allow CPAN::Reporter find updates
+* Correct META-Files
+* Fixed reported bugs:
+
+
+Version 1.18_02, no public release
+-----------------------------------
+
+Additional (profiled) optimizations for complicated where clauses
+
+Version 1.18_01, released January 12th, 2009
+---------------------------------------------
+
+No code changes within SQL::Statement - but deliver and execute additional
+tests.
+
+Version 1.17, released January 12th, 2009
+------------------------------------------
+
+* Fixed reported bugs:
+  * RT#42263: GROUP BY doesn't group on multiple columns
+
 Version 1.16_04, released 4 January, 2009
 ------------------------------------------
 
